2022-06-27  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/html/pre-html.cpp
	(char_buffer::run_output_filter): Return wait status of child
	process.
	(char_buffer::run_output_filter, main): Rename local variable
	`status` to `wstatus` to recognize distinction between exit
	status (a 7-bit quantity) and wait status (a wider type).
	(main): Issue fatal diagnostic if child process exited with
	nonzero status.  Since the child's output to the standard error
	stream is lost, advise re-running with different output driver
	to see them.  This unhappy shortcoming is filed as Savannah
	#62673.  Explicitly return zero otherwise.

	Fixes <https://savannah.gnu.org/bugs/?60782>.

2022-06-22  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/ab_works.sh: Add regression test for
	Savannah #60782.

2022-06-22  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Trivially refactor.

	* src/roff/troff/input.cpp (token::next): Rename statement label
	to use documentary terminology.
	* src/roff/troff/node.cpp (make_composite_node,
	make_glyph_node): Make functions static since nothing outside
	this translation unit calls them.
	* src/roff/troff/node.cpp (make_glyph_node): Refactor optional
	argument and its usage.  Put it down, flip it, and reverse it.
	That is, demote its type from `int` to `bool`, invert its sense,
	and rename it since it affects warning, not error, diagnostics.
	(character_exists): Update only call site of `make_glyph_node()`
	that uses non-default argument value.

2022-06-22  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Adjust diagnostic message text to clarify and better
	match terminology used in documentation.

	* src/roff/troff/input.cpp (set_escape_char, do_overstrike,
	do_bracket, do_name_test, do_width, do_special):
	* src/roff/troff/node.cpp (suppress_node::tprint): Migrate from
	"escape" to "escape sequence".

	* src/roff/troff/node.cpp (make_composite_node,