@@ -1,5 +1,10 @@
 2022-06-27  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	* src/roff/groff/groff.cpp (run_commands): Trivially refactor.
+	Rename variable for clarity; add comment.
+
+2022-06-27  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	* src/preproc/html/pre-html.cpp
 	(char_buffer::run_output_filter): Return wait status of child
 	process.
